[metadata]
name = insecureBlog
author = Dajuan Mcdonald (llanhmod)
author-email = flopwiki@gmail.com
license = BSD
long_description = file: README.rst
requires-python = >=3.8

classifiers =
	Programming Language :: Python
	Environment :: Browser
	Intended Audience :: Developers
	License :: OSI Approved :: BSD
	Operating System :: OS Independent


